--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,16 @@
 @import "font";
 @import "color";
 
+// skip btn
+a.skipBtn{
+    position: fixed;
+    top: -100px;
+    &:focus{
+        top: 0px;
+        z-index: 10;
+    }
+}
+
 // special background effects
 // animation
 @keyframes zoomIn {
