--- a/css/bm-cards.css
+++ b/css/bm-cards.css
@@ -307,4 +307,84 @@ footer label {
   position: fixed;
   bottom: 10px;
   color: #3c3e46;
+}
+
+@media only screen and (max-width: 450px) {
+  .bmCardBg {
+    display: none;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 0.7rem;
+    text-align: center;
+  }
+  main p {
+    font-size: 0.8rem;
+    letter-spacing: 0.05rem;
+  }
+  main .broccmonCard {
+    display: flex;
+    flex-direction: column;
+  }
+  main .broccmonCard #skillBox {
+    margin: 0;
+    width: 100%;
+    justify-content: start;
+  }
+  main .broccmonCard #skillBox #skillList {
+    width: 100%;
+  }
+  main .broccmonCard .broccmonAvatar {
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+    justify-content: start;
+  }
+  main .broccmonCard .broccmonAvatar #scrollAvatar {
+    width: 6rem;
+    height: 6rem;
+    z-index: 3;
+  }
+  main #summarySection section {
+    width: 33%;
+  }
+  main #summarySection section button {
+    font-size: 0.4rem;
+  }
+  main #summarySection section dialog {
+    width: 100vw !important;
+    height: 50vh;
+  }
+  main #summarySection section dialog svg {
+    width: 5rem;
+    height: 5rem;
+  }
+  main .experienceSection div.nes-container {
+    height: 180vh;
+  }
+  main .experienceSection div.nes-container .title {
+    font-size: 1rem;
+  }
+  main .experienceSection div.nes-container .images {
+    display: flex;
+    flex-direction: column;
+    opacity: 0.3;
+    transform: scale(1);
+  }
+  main .experienceSection div.nes-container .images picture {
+    width: 100%;
+  }
+  footer {
+    width: 100vw;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  footer label {
+    display: none;
+  }
+  footer button {
+    font-size: 0.5rem;
+  }
 }/*# sourceMappingURL=bm-cards.css.map */
