--- a/css/fight.css
+++ b/css/fight.css
@@ -267,4 +267,63 @@ footer em {
   letter-spacing: 0.2rem;
   font-size: 0.8rem;
   font-family: "Press Start 2P", system-ui;
+}
+
+@media only screen and (max-width: 450px) {
+  .fiBg {
+    display: none;
+  }
+  h1 {
+    font-size: 0.5rem !important;
+  }
+  h2 {
+    font-size: 0.5rem !important;
+    text-align: end;
+  }
+  main p {
+    font-size: 0.8rem;
+    letter-spacing: 0.05rem;
+  }
+  main {
+    overflow: hidden;
+  }
+  main .broccmon {
+    width: 100vw;
+  }
+  main .broccmon .avatar {
+    grid-row: 1/3;
+  }
+  main .broccmon .avatar .nes-balloon {
+    width: 30vw;
+  }
+  main .broccmon .avatar svg {
+    width: 5rem;
+    height: 5rem;
+  }
+  main .broccmon .status .title, main .broccmon .status button {
+    font-size: 0.7rem !important;
+  }
+  main .broccmon .status div button {
+    font-size: 0.5rem !important;
+    margin-bottom: 5%;
+  }
+  main .broccmon .status .is-error {
+    width: -moz-max-content;
+    width: max-content;
+    left: 0;
+  }
+  main .enemy #enemyStatus h5, main .enemy #enemyStatus h6 {
+    font-size: 0.9rem;
+  }
+  main .enemy #cliBit {
+    grid-row: 3/5;
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+  footer {
+    width: 100vw;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
 }/*# sourceMappingURL=fight.css.map */
